Header finished, added media query with burger

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css" />
+    <script src="https://kit.fontawesome.com/f03f01edcc.js" crossorigin="anonymous"></script>
     <title>Anurag Numboori's Workspace</title>
   </head>
 
@@ -15,6 +16,7 @@
         <li><a href="#" class="btn hidden">Projects</a></li>
         <li><a href="#" class="btn hidden">Resume</a></li>
         <li><a href="#" class="btn hidden">Contact</a></li>
+        <li><a href="#" class="btn burger hidden"><i class="fas fa-bars 3x"></i></a></li>
       </ul>
     </header >
 
