Added background, needs effect on anurag

--- a/index.html
+++ b/index.html
@@ -5,24 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css" />
-    <script src="https://kit.fontawesome.com/f03f01edcc.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/f03f01edcc.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Anurag Numboori's Workspace</title>
   </head>
 
   <body>
     <header>
       <ul class="header text-xl">
-        <li><a href="#" class="btn active" id="home">Home</a></li>
-        <li><a href="#" class="btn hidden">Projects</a></li>
-        <li><a href="#" class="btn hidden">Resume</a></li>
-        <li><a href="#" class="btn hidden">Contact</a></li>
-        <li><a href="#" class="btn burger hidden"><i class="fas fa-bars 3x"></i></a></li>
+        <li><a href="#" class="btn">Home</a></li>
+        <li><a href="#" class="btn">Projects</a></li>
+        <li><a href="#" class="btn">Resume</a></li>
+        <li><a href="#" class="btn">Contact</a></li>
+        <li>
+          <a href="#" class="btn burger hidden"
+            ><i class="fas fa-bars 3x"></i
+          ></a>
+        </li>
       </ul>
-    </header >
-
-
-
-    <!-- SHOWCASE -->
-    <section class="showcase"></section>
+      <!-- SHOWCASE -->
+      <div class="showcase background">
+        <div class="showcase-content">
+          <h1>Hi I'm Anurag Numboori</h1>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
