Finished Home Screen, burger pushed to right on mobile

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <li><a href="#" class="btn">Projects</a></li>
         <li><a href="#" class="btn">Resume</a></li>
         <li><a href="#" class="btn">Contact</a></li>
+        <!-- Burger -->
         <li>
-          <a href="#" class="btn burger hidden"
-            ><i class="fas fa-bars 3x"></i
-          ></a>
+          <a href="#" class="btn burger"><i class="fas fa-bars 3x"></i></a>
         </li>
       </ul>
       <!-- SHOWCASE -->
       <div class="showcase background">
-        <div class="showcase-content">
-          <h1>Hi I'm Anurag Numboori</h1>
+        <div class="showcase-content text-intro">
+          <h1>Anurag Numboori</h1>
+          <p>Computer Engineering major at Purdue University</p>
         </div>
       </div>
     </header>
