cleaned up code setup area for projects grid

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
           <a href="#" class="btn burger"><i class="fas fa-bars 3x"></i></a>
         </li>
       </ul>
+    </header>
+
+    <section class="showcase">
       <!-- SHOWCASE -->
       <div class="showcase background">
         <div class="showcase-content text-intro">
@@ -31,6 +34,16 @@
           <p>Computer Engineering major at Purdue University</p>
         </div>
       </div>
-    </header>
+    </section>
+    <section class="projects">
+      <div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
+          necessitatibus magni veritatis ducimus aut harum. Numquam molestias
+          architecto sunt quis animi, doloribus repudiandae repellat! Saepe
+          ipsam dolorum officiis soluta aut!
+        </p>
+      </div>
+    </section>
   </body>
 </html>
