--- a/index.html
+++ b/index.html
@@ -36,13 +36,11 @@
       </div>
     </section>
     <section class="projects">
-      <div>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
-          necessitatibus magni veritatis ducimus aut harum. Numquam molestias
-          architecto sunt quis animi, doloribus repudiandae repellat! Saepe
-          ipsam dolorum officiis soluta aut!
-        </p>
+      <div class="grid-container">
+        <div class="grid-item">Project 1</div>
+        <div class="grid-item">Project 2</div>
+        <div class="grid-item">Project 3</div>
+        <div class="grid-item">Project 4</div>
       </div>
     </section>
   </body>
