--- a/index.html
+++ b/index.html
@@ -1,47 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./style.css" />
-    <script
-      src="https://kit.fontawesome.com/f03f01edcc.js"
-      crossorigin="anonymous"
-    ></script>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Anurag Numboori's Workspace</title>
-  </head>
+</head>
 
-  <body>
-    <header>
-      <ul class="header text-xl">
-        <li><a href="#" class="btn">Home</a></li>
-        <li><a href="#" class="btn">Projects</a></li>
-        <li><a href="#" class="btn">Resume</a></li>
-        <li><a href="#" class="btn">Contact</a></li>
-        <!-- Burger -->
-        <li>
-          <a href="#" class="btn burger"><i class="fas fa-bars 3x"></i></a>
-        </li>
-      </ul>
-    </header>
+<body>
 
     <section class="showcase">
-      <!-- SHOWCASE -->
-      <div class="showcase background">
-        <div class="showcase-content text-intro">
-          <h1>Anurag Numboori</h1>
-          <p>Computer Engineering major at Purdue University</p>
+        <!-- SHOWCASE -->
+        <div class="showcase background">
+            <div class="showcase-content text-intro">
+                <h1>Anurag Numboori</h1>
+                <p>Computer Engineering major at Purdue University</p>
+            </div>
         </div>
-      </div>
     </section>
-    <section class="projects">
-      <div class="grid-container">
-        <div class="grid-item">Project 1</div>
-        <div class="grid-item">Project 2</div>
-        <div class="grid-item">Project 3</div>
-        <div class="grid-item">Project 4</div>
-      </div>
-    </section>
-  </body>
+
+</body>
+
 </html>
