removing extra files

--- a/index.html
+++ b/index.html
@@ -1,24 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./static/style.css" />
+
     <title>Anurag Numboori's Workspace</title>
 </head>
 
 <body>
 
-    <section class="showcase">
-        <!-- SHOWCASE -->
-        <div class="showcase background">
-            <div class="showcase-content text-intro">
+    <div id="pg1" class="page">
+        <div class="container">
+            <div class="wrapper pg1">
                 <h1>Anurag Numboori</h1>
-                <p>Computer Engineering major at Purdue University</p>
             </div>
         </div>
-    </section>
+    </div>
+    
+    <div id="pg2" class="page parallax">
+        <div class="wrapper">
+            <h1>Education</h1>
+            <p>Studying Computer Engineering at Purdue University</p>
+        </div>
+    </div>
+    <div id="pg3" class="page">
+        <div class="wrapper">
+            <h1>Projects</h1>
+            <p>Embedded Design Piano</p>
+            <p>Fake Reddit</p>
+        </div>
+    </div>
+    <div id="pg4" class="page parallax">
+        <div class="wrapper">
+            <h1>Resume</h1>
+            <p>Here</p>
+            <p>Contact</p>
+        </div>
+    </div>
+    <div id="pg5" class="page">
+        <div class="wrapper">
+            <h1>LOL services</h1>
+            <p>Peak</p>
+            <p>Coaching</p>
+        </div>
+    </div>
+
+    <footer>
+        <div class="footparent">
+            <p>Site created by <strong>Anurag Numboori</strong></p>
+        </div>
+    </footer>
+<script src="static/main.js"></script>
 
 </body>
 
