cleaned up code. fixed mobile probably

--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
     </div>
 
     <footer>
-        <div class="footparent">
+        <div class="foot">
             <p>Site created by <strong>Anurag Numboori</strong></p>
         </div>
     </footer>
-<script src="static/main.js"></script>
+    
+    <script src="static/main.js"></script>
 
 </body>
 
